--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<p> </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>amazon.com</title>
+    <link rel="stylesheet" href="/style.css">
+</head>
+<body>
+    <header>
+        <div class="nav-bar">
+            <div class="logo">
+                <a href="#"><img src="/logo.png" alt="amazon"></a>
+                
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="Search for products">
+                <button>Search</button>
+            </div>
+            <div class="nav-links">
+                <a href="#">Sign In</a>
+                <a href="#">Orders</a>
+                <a href="#">Cart</a>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="product-section">
+            <h2>Featured Products</h2>
+            <div class="products">
+                <div class="product-card">
+                    <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-15-blue-select-202309?wid=940&hei=1112&fmt=png-alpha&.v=1692991067587" alt="Product 1">
+                    <p>₹100000</p>
+                </div>
+                <div class="product-card">
+                    <img src="https://ik.imagekit.io/3dqckpw4d/upload/iphone_15_pro_max_Blue_Titanium1694624154Blue%20Titanium.png" alt="Product 2">
+                    <p>₹130000</p>
+                </div>
+                <div class="product-card">
+                    <img src="https://www.bigcmobiles.com/media/catalog/product/cache/e19e56cdd4cf1b4ec073d4305f5db95a/t/i/titanium_violet_1_1.jpg" alt="Product 3">
+                    <p>₹105000</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Amazon Clone. All rights reserved.</p>
+    </footer>
+</body>
+</html>
